5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1684_1872.log
== TEST (2019-06-21 00:27:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:28:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- EXECUTION TIME:
0.685679
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:28:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:29:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- EXECUTION TIME:
0.919289
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:29:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:29:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- EXECUTION TIME:
0.894589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:20:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:20:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
	
-- EXECUTION TIME:
0.767516
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:22:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(Eixo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(Eixo)
NameError: name 'Eixo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:22:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(y)
-- OUTPUT:
Q4
-2.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:23:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(y)
-- EXECUTION TIME:
0.719214
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-2.2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
0.0
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origim
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:23:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- OUTPUT:
Q4
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:23:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- EXECUTION TIME:
0.615829
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
4.5
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
0.1
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
x: y: Origim
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:23:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- OUTPUT:
Q4
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:23:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- EXECUTION TIME:
0.822846
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
4.5
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
0.1
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origim
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:23:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:24:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
	
print(x)
-- EXECUTION TIME:
0.690497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:24:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:24:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
-- EXECUTION TIME:
0.740676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 03:25:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
from math import*
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 03:25:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
from math import*
x=int(input("x: "))
y=float(input("y: "))
if(x==0 and y==0):
	print("Origim")
elif(y==0):
	print("Eixo x")
elif(x==0):
	print("Eixo y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
-- EXECUTION TIME:
0.951219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
